Fixed styling on small screens, only content scrollable

--- a/source/frontend/app/App.sass
+++ b/source/frontend/app/App.sass
@@ -3,7 +3,15 @@
 .App
   background-color: var(--primary-color)
   color: var(--text-color)
-
+  width: 100vw
   height: 100vh
+
   display: grid
-  grid-template-rows: 64px 1fr 56px
+  grid-template-rows: 64px auto 56px
+
+  // display: flex
+  // flex-direction: column
+
+  .ContentWrapper
+    // flex-grow: 1
+    overflow: auto
