--- a/source/frontend/app/containers/BottomNavContainer/BottomNavContainer.sass
+++ b/source/frontend/app/containers/BottomNavContainer/BottomNavContainer.sass
@@ -1,6 +1,7 @@
 @import '../../assets/sass/vars'
 
 .BottomNavContainer
+  width: 100vw
   background-color: var(--nav-color) !important
 
   .BottomNavigationAction
