--- a/source/frontend/app/containers/MensaContainer/components/MenuPlan/MenuPlan.sass
+++ b/source/frontend/app/containers/MensaContainer/components/MenuPlan/MenuPlan.sass
@@ -6,11 +6,12 @@
     display: flex
     width: 100%
     justify-content: center
-    padding-top: 20px
+    padding-top: 2vh
+    font-size: 0.8rem
 
   .MenuPlanHeader
-    padding-top: 20px
-    padding-bottom: 20px
+    padding-top: 2vh
+    padding-bottom: 2vh
     display: flex
     font-size: 1.2em
     align-content: center
