--- a/source/frontend/app/containers/ScheduleContainer/ScheduleContainer.sass
+++ b/source/frontend/app/containers/ScheduleContainer/ScheduleContainer.sass
@@ -1,13 +1,18 @@
 @import '../../assets/sass/vars'
 
 .ScheduleContainer
-  height: 98%
-  width: 100vw
-  max-width: 100vw
+  height: 100%
   display: grid
-  grid-template-columns: 0.25fr 1fr 1fr 1fr 1fr 1fr 1fr 0.25fr
   grid-template-rows: 48px auto
-  overflow: scroll
+
+  .NavigationContainer
+    display: grid
+    grid-template-columns: 48px 1fr 1fr 1fr 1fr 1fr 1fr 48px
+
+  .TimetableContainer
+    display: grid
+    grid-template-columns: 48px 1fr 1fr 1fr 1fr 1fr 1fr 48px
+    overflow: auto
 
   #Gripper
     grid-column: 1 / 9
